feat:加入fishnote destory 的api文件
